2005-07-08  Kazuhiko  <kazuhiko@fdiary.net>
	* messages/fr.rb, messages/it.rb (msg_login_failure): add a
	missing 'end'.
	* hiki/config.rb (guess_lang): add a new method to detect
	browsers' accept languages.

2005-07-06  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/i18n/hikiconf.rb.sample.en: add a setting of @base_url.

2005-07-06  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/attach/attach.rb: export 'attach_form' method
	(reported by Fu).

2005-07-05  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/db/flatfile.rb (store): ignore Errno::EPERM in File::utime
	(reported by hashi).

	* hiki/command.rb (cmd_save): always save the 'editor' attribute.

2005-07-04  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/pluginutil.rb (apply_plugin): catch all exceptions
	(reported by Kouhei Sutou).

	* style/default/html_formatter.rb (token_to_s): always use the
	'plugin_error' method (reported by Kouhei Sutou).

	* style/default/html_formatter.rb (toc): return more simple HTML.

	* hiki/util.rb (plugin_error): escape exception messages (reported
	by Kouhei Sutou).

2005-07-03  Kouhei Yanagita <sugi@dream.big.or.jp>
	* style/default/html_formatter.rb (token_to_s): a double quote for
	colspan is lacked.

2005-07-02  Kazuhiko  <kazuhiko@fdiary.net>
	* template/adminform.html: revise HTML (reported by Fu).

2005-07-01  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/xmlrpc/xmlrpc.cgi: use 'Plugin#save' instead of
	'HikiDB#save'.

2005-06-29  Kazuhiko  <kazuhiko@fdiary.net>
	* Hiki 0.8.0 released!

	* plugin/02help.rb (help_enabled?): add a new method.

	* template/edit.html, template/i.edit.html: set a value in a
	'update_timestamp' checkbox (reported by KAWAI Masahiro).

	* plugin/02help.rb, plugin/en/02help.rb, plugin/ja/02help.rb: add
	a new plugin for support editing (by NAGASAKI).

	* hiki/db/flatfile.rb (store): fix a bug in making a new page
	without updating timestamp.

	* misc/plugin/comment.rb (comment_post): not add emphasize and
	link tags around a name (reported by Kouhei Sutou).
